fixed spacing to icons

--- a/AMW_angular/io/src/app/deployment/deployments.scss
+++ b/AMW_angular/io/src/app/deployment/deployments.scss
@@ -38,7 +38,8 @@ tr.failed {
 tr.success {
   background-color: #dff0d8;
 }
-
+span.action,
+span.delayed,
 span.state {
   margin-left: 8px;
 }
